feat: terminei de fazer as modificacoes nas modalidades

--- a/blog-carousel.html
+++ b/blog-carousel.html
@@ -173,8 +173,8 @@
                 <li>
                   <a href="index.html">Home</a>
                 </li>
-                <li class=" ">
-                  <a href="reviews.html">Legislação</a>
+                     <li><a href="about.html">Sobre</a></li><li><a href="services.html">Comunicados e informações</a></li><li class=" ">
+                    <a href="reviews.html">Legislação</a>
                 </li>
 
                 <li><a href="services.html">Comunicados e informações</a></li>
