--- a/blog-details-right.html
+++ b/blog-details-right.html
@@ -111,7 +111,8 @@
 
                              <li>
                         <a href="index.html">Home</a>
-                      </li><li class=" ">   <a href="reviews.html">Legislação</a>
+                      </li>     <li><a href="about.html">Sobre</a></li><li><a href="services.html">Comunicados e informações</a></li><li class=" ">
+                    <a href="reviews.html">Legislação</a>
                                 <ul>
                                     <li>
                                         <div class="megamenu-popup">
@@ -654,7 +655,7 @@
                             <div class="footer-widget">
                                 <div class="footer-widget--links footer-widget--links2">
                                     <ul class="list-unstyled footer-widget__links">
-                                         <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
+                                         <li><a href="about.html">Sobre</a></li><li><a href="services.html">Comunicados e informações</a></li>
                                         <li><li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
