--- a/index.html
+++ b/index.html
@@ -177,11 +177,10 @@
               <ul class="main-menu__list">
                  <li>
                         <a href="index.html">Home</a>
-                      </li><li class=" ">
-                  <a href="reviews.html">Legislação</a>
+                      </li>     <li><a href="about.html">Sobre</a></li><li><a href="services.html">Comunicados e informações</a></li><li class=" ">
+                    <a href="reviews.html">Legislação</a>
                 </li>
 
-                 <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
                 <li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
@@ -956,7 +955,7 @@ O team do Interclube
                 <div class="footer-widget">
                   <div class="footer-widget--links footer-widget--links2">
                     <ul class="list-unstyled footer-widget__links mt-xl-5">
-                       <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
+                       <li><a href="about.html">Sobre</a></li><li><a href="services.html">Comunicados e informações</a></li>
                       <li><li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
