--- a/reviews.html
+++ b/reviews.html
@@ -173,11 +173,11 @@ https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css
               <ul class="main-menu__list">
                  <li>
                         <a href="index.html">Home</a>
-                      </li><li class=" ">
-                  <a href="reviews.html">Legislação</a>
+                      </li>     <li><a href="about.html">Sobre</a></li><li class=" ">
+                    <a href="reviews.html">Legislação</a>
                 </li>
+                <li><a href="services.html">Comunicados e informações</a></li>
 
-                 <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
                 <li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
@@ -752,7 +752,7 @@ https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css
                 <div class="footer-widget">
                   <div class="footer-widget--links footer-widget--links2">
                     <ul class="list-unstyled footer-widget__links">
-                       <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
+                       <li><a href="about.html">Sobre</a></li><li><a href="services.html">Comunicados e informações</a></li>
                       <li><li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
