--- a/services.html
+++ b/services.html
@@ -173,12 +173,11 @@
                 <li>
                   <a href="index.html">Home</a>
                 </li>
-                <li class=" ">
-                  <a href="reviews.html">Legislação</a>
+                     <li><a href="about.html">Sobre</a></li><li class=" ">
+                    <a href="reviews.html">Legislação</a>
                 </li>
 
                 <li><a href="services.html">Comunicados e informações</a></li>
-                <li><a href="about.html">Sobre</a></li>
                 <li class="dropdown"></li>
                 <li class="dropdown">
                   <a href="#">Modalidades</a>
