--- a/team-carousel.html
+++ b/team-carousel.html
@@ -174,7 +174,6 @@
 
                 </li>
 
-                 <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
                 <li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
@@ -861,7 +860,7 @@
                 <div class="footer-widget">
                   <div class="footer-widget--links footer-widget--links2">
                     <ul class="list-unstyled footer-widget__links">
-                       <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
+                       <li><a href="about.html">Sobre</a></li><li><a href="services.html">Comunicados e informações</a></li>
                       <li><li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
